# printf

./: CMakeLists.txt  Makefile  main.c  printf.c  printf.h  utils.c
42TESTERS-PRINTF/: diff.txt  printf.out  printf.txt
42TESTERS-PRINTF/results/: test_result.txt
42TESTERS-PRINTF/srcs/: tester.out
libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_isspace_bonus.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  (+10 more)
parser/: flags.c  parser.c  parser.h
printf_lover_v2/utils/generated_tests/assert_tests/includes/: printf.h
printf_lover_v2/utils/generated_tests/assert_tests/sources/: test_func_XX.c  test_func_c.c  test_func_d.c  test_func_i.c  test_func_p.c  test_func_percent.c  test_func_s.c  test_func_u.c  test_func_x.c
printf_lover_v2/utils/generated_tests/generated_tests_usr_version/includes/: processor.h
printf_lover_v2/utils/generated_tests/sources/: test_func_percent.c
processor/: XX.c  c.c  capital_x.c  di.c  di2.c  p.c  process.c  processor.c  processor.h  s.c  u.c  x.c
